# digital-me-skill

./: .gitignore  INSTALL.md  README.md  SKILL.md  pyproject.toml  requirements.txt
.claude/skills/digital-twin-audit/: SKILL.md
.claude/skills/digital-twin-delete/: SKILL.md
.claude/skills/digital-twin-help/: SKILL.md
.claude/skills/digital-twin-list/: SKILL.md
.claude/skills/digital-twin-review/: SKILL.md
.claude/skills/digital-twin-update/: SKILL.md
prompts/: behavioral_extraction.md  injection_shield.md  intake.md  llm_scrub.md  twin_synthesizer.md
tests/: conftest.py  test_behavioral_extractor.py  test_email_parser.py  test_extraction_models.py  test_extraction_validator.py  test_feishu_collector.py  test_incremental_importer.py  test_ingestion_output.py  test_llm_scrubber.py  test_pdf_parser.py  test_pii_scrubber.py  test_privacy_auditor.py  test_storage_integrity.py  test_text_ingestor.py  test_twin_skill_writer.py  test_twin_synthesizer.py  test_version_manager.py  test_wechat_parser.py
tests/fixtures/: sample.eml  sample_knowledge_cn.json  sample_knowledge_en.json  sample_wechat.csv
tools/: behavioral_extractor.py  dingtalk_auto_collector.py  email_parser.py  extraction_models.py  feishu_auto_collector.py  feishu_browser.py  feishu_mcp_client.py  feishu_parser.py  incremental_importer.py  ingestion_output.py  pdf_parser.py  pii_scrubber.py  privacy_auditor.py  slack_auto_collector.py  text_ingestor.py  twin_skill_writer.py  twin_synthesizer.py  twin_writer.py  version_manager.py  wechat_parser.py
